--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@ngneat/reactive-forms": "^5.0.2",
+    "@ngrx/operators": "^19.2.1",
+    "@ngrx/signals": "^19.2.1",
+    "@primeng/themes": "^19.1.3",
+    "angular2-uuid": "^1.1.1",
+    "primeng": "^19.1.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
